--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ background-attachment: fixed;
 </nav>
 
   <div class="tab-content">
-    <div id="home" class="tab-pane fade-in">
+    <div id="home" class="tab-pane fade-in active">
 
   <div class="row mt-5">
      
