--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ background-attachment: fixed;
         <img src="img/logo3.jpg" class=" forlogo px-2 navbar-logo">
            <a class="navbar-brand forbrand " href="#" style="color: #202529;">AMC Store<h6> &nbsp;attar & perfume</h6></a>
   <ul id="menu">
-	  <li class="forwp mx-lg-2 mx-4"><a href="indexideal.html"><img src="img/bag.png">cart</a></li>
+	  <li class="forwp mx-lg-2 mx-4"><img src="img/bag.png">cart</a></li>
   <li class="mx-lg-0 mx-5"><a class="btn btn-light" href="https://wa.me/9537206754"><img src="img/wp.png"> Chat</a>
 </li>
 
